# MidiReRouter

./: ..gitignore.un~  .gitignore  .gitignore~  DEVNOTES.md  LICENSE  NewProject.jucer  README.md
GUI/: CMakeCache.txt  CMakeLists.txt
GUI/binary/: BinaryData1.cpp  BinaryData10.cpp  BinaryData11.cpp  BinaryData12.cpp  BinaryData13.cpp  BinaryData14.cpp  BinaryData15.cpp  BinaryData16.cpp  BinaryData2.cpp  BinaryData3.cpp  BinaryData4.cpp  BinaryData5.cpp  BinaryData6.cpp  BinaryData7.cpp  BinaryData9.cpp  MyBinaryData.h  input_file_list
GUI/midirouter-gui/: README.md  package-lock.json  package.json  tsconfig.json
GUI/midirouter-gui/public/: index.html
GUI/midirouter-gui/src/: App.css  App.tsx  declarations.d.ts  index.tsx  types.ts
GUI/midirouter-gui/src/components/Header/: Header.tsx  Title.tsx
GUI/midirouter-gui/src/components/MidiTableComponent/: MidiTableComponent.tsx
GUI/midirouter-gui/src/components/PresetPanel/: PresetPanel.tsx
GUI/midirouter-gui/src/juce/: index.d.ts
Source/: Broadcaster.cpp  Broadcaster.h  FallBack.cpp  FallBack.h  Listener.cpp  Listener.h  MidiDropdownComponent.cpp  MidiDropdownComponent.h  MidiProcessor.cpp  MidiProcessor.h  MidiTextBox.cpp  MidiTextBox.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  PresetPanel.cpp  PresetPanel.h  TableMidiComponent.cpp  TableMidiComponent.h  WebView.cpp  WebView.h  constants.h  types.h  utilities.cpp  utilities.h
